resolved cutoff

--- a/web/src/styles/_variables.scss
+++ b/web/src/styles/_variables.scss
@@ -1,1 +1,6 @@
 $blue: #3F61EA;
+$black: #000;
+
+
+$mobile-breakpoint: 550px;
+$tablet-breakpoint: 768px;
