--- a/web/src/styles/main.scss
+++ b/web/src/styles/main.scss
@@ -1,15 +1,39 @@
 @import "variables";
 @import 'nav';
 
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  min-height: 100%;
+  height: 100%;
+}
+
+body {
+  font-family: 'Stolzl', sans-serif;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
+.root {
+
+  .section {
+    max-width: 70rem;
+  }
+}
+
 .container {
+  display: flex;
+  flex-direction: column;
   max-width: 70rem;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 10vw 1rem 1rem 1rem;
 }
 
 .gn-link {
@@ -25,5 +49,40 @@ a {
   &.main {
     max-width: 35rem;
     font-size: 1.2rem;
+  }
+}
+
+.wrapper {
+  display: flex;
+
+  &.main {
+    padding-bottom: 3rem;
+  }
+
+  .group {
+    flex: 1;
+  }
+
+  @media screen and (max-width: $mobile-breakpoint) {
+    flex-direction: column;
+  }
+}
+
+.subheader {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
+ul {
+  list-style-type: none;
+  
+  &.flex {
+    display: flex;
+  }
+}
+
+.section {
+  .subheader, p {
+    padding-bottom: 5px;
   }
 }
